remove API keys

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ node_modules
 dist
 dist-ssr
 *.local
-
+download-images.md
+download-images.ts
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
